Omnibox UI Experiments: Steady State Elisions - Fix drag threshold bug.

Previously, the drag threshold calculation had a bug. The last-click
event was stored as a root_location, which was tested against the drag
event's location relative to the View origin.

This CL makes both the stored last-click and the current drag event
use the root_location. Using root_location is most robust, since the
View itself can move in response to edit-in-progress state.

It also updates the API of textfield to make more explicit that the
stored last click location is a root_location rather than relative
to the position of the View.

This CL also adds a test.

Bug: 838830, 797354
Change-Id: Iedff486a3c6e842bc5c87c6fd597e1faf7a2930d
Reviewed-on: https://chromium-review.googlesource.com/1040347
Commit-Queue: Tommy Li <tommycli@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555613}
Former-commit-id: 90a71482c170466725cb4e217d8932cb8ac508e9